<resources>
    <string name="app_name">GDLREADER</string>
    <string name="title_activity_patalla_prueba">PatallaPrueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="seleccionaIdioma">Español</string>
    <string name="idioma">Idioma</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mushoku_tensei">Autor: David Stokes</string>
    <string name="datos_principales_libro">Creado por: David Stokes.\n\nEditorial: McGraw-Hill Education; 1er edición (6 Junio 2018) \n\nIdioma: Inglés. \n\nTapa blanda 128 páginas. \n\nPeso del Artículo 5.8 onzas.\n\nDimensiones 6 x 0.25 x 8.75 pulgadas.</string>
    <string name="sipnosis_libros">This hands-on guide teaches, step by step, how to use JavaScript Object Notation (JSON) with MySQL. Written by a MySQL Community Manager for Oracle, MySQL and JSON: A Practical Programming Guide shows how to quickly get started using JSON with MySQL and clearly explains the latest tools and functions. All content is based on the author’s years of interaction with MySQL professionals. Throughout, real-world examples and sample code guide you through the syntax and application of each method. You will get in-depth coverage of programming with the MySQL Document Store.</string>
    <string name="texto_sobre_nosotros">Nosotros somos un equipo de estudiantes que se están encargando del desarrollo de la aplicación para que los alumnos del instutuo tecnológico de aguascalientes puedan acceder directamente a la existencia de libros que disponga el centro de información del instituto.</string>
    <string name="nombreHeader"> Carlos Uriel </string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="mi_tarjeta">Mi Tarjeta</string>
    <string name="mis_libros">Mis Libros</string>
    <string name="nosotros">Nosotros</string>
    <string name="cerrar">Cerrar</string>
    <string name="sesi_n">Sesión</string>
    <string name="telefonoContacto">Teléfono: 4491543007:</string>
    <string name="contactanos">Contáctanos:</string>
    <string name="qui_nes_somos">¿Quiénes somos?</string>

    <string-array name="Carreras">
        <item>Administración</item>
        <item>Eléctrica</item>
        <item>Electrónica</item>
        <item>Gestión Empresarial</item>
        <item>Industrial</item>
        <item>Materiales</item>
        <item>Mecánica</item>
        <item>Quimica</item>
        <item>Tic´s</item>
    </string-array>

    <string-array name="Semestre">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="datos_generales">Datos Generales</string>
    <string name="creado_por">Creado por:</string>
    <string name="editorial">Editorial:</string>
    <string name="idioma_info">Idioma:</string>
    <string name="paginas">Paginas:</string>
    <string name="dismensiones">Dismensiones:</string>
    <string name="sipnosis">Sipnosis</string>
    <string name="apartar">Apartar</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate_aqu">Registrate Aquí</string>
    <string name="inicar_sesi_n">Inicar Sesión</string>
    <string name="busca_tus_libros">Busca tus libros</string>
    <string name="buscar">Buscar</string>
    <string name="autor">Autor:</string>
    <string name="genero">Genero:</string>
    <string name="libros_interesantes">Libros interesantes</string>
    <string name="carrera">Carrera</string>
    <string name="semestre">Semestre</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="no_control">No. Control</string>
    <string name="nombre_completo">Nombre completo</string>


</resources>