<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SobreNosotros"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    >
    <!--tools:openDrawer="start"-->

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            app:popupTheme="@color/color_principal"
            app:subtitleTextColor="#28A5E8"
            app:navigationIcon="@drawable/icon_barra_menu"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qui_nes_somos"
                    android:textAlignment="center"
                    android:textColor="@color/color_principal"
                    android:textSize="30dp" />

                <ImageView
                    android:id="@+id/logoPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/textViewTitulo"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logo"/>


                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/TextoJustificadoSobreNosotros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logoPerfil"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_border_text"
                    android:text="@string/texto_sobre_nosotros"
                    android:textColor="@color/color_principal"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textviewContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextoJustificadoSobreNosotros"
                    android:layout_marginTop="10dp"
                    android:text="@string/contactanos"
                    android:textAlignment="center"
                    android:textColor="@color/color_principal"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textviewContacto"
                    android:layout_marginTop="10dp"
                    android:text="@string/telefonoContacto"
                    android:textAlignment="center"
                    android:textColor="@color/color_principal"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/correoNosotros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/telefono"
                    android:layout_marginTop="10dp"
                    android:text="Email: gdlreade@gmail.com"
                    android:textAlignment="center"
                    android:textColor="@color/color_principal"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/logow"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/correoNosotros"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_whats" />

                <ImageView
                    android:id="@+id/logof"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/correoNosotros"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/logow"
                    android:src="@drawable/icon_facebook" />

            </RelativeLayout>

        </ScrollView>


    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>